# rust-managed

./: .travis.yml  Cargo.toml  README.md  coverage.sh
src/: lib.rs  map.rs  object.rs  slice.rs  slotmap.rs
